--- a/2025.html
+++ b/2025.html
@@ -10,8 +10,8 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Word.Document>
 <meta name=Generator content="Microsoft Word 15">
 <meta name=Originator content="Microsoft Word 15">
-<link rel=File-List href="2025%20年度菊島澎湖行程價目表V1%20.fld/filelist.xml">
-<link rel=Edit-Time-Data href="2025%20年度菊島澎湖行程價目表V1%20.fld/editdata.mso">
+<link rel=File-List href="2025年度菊島澎湖行程價目表V1%20.fld/filelist.xml">
+<link rel=Edit-Time-Data href="2025年度菊島澎湖行程價目表V1%20.fld/editdata.mso">
 <!--[if !mso]>
 <style>
 v\:* {behavior:url(#default#VML);}
@@ -20,7 +20,7 @@ w\:* {behavior:url(#default#VML);}
 .shape {behavior:url(#default#VML);}
 </style>
 <![endif]-->
-<title>2024年~澎湖之美旅行社代訂行程~同業報價表(民宿特約價)</title>
+<title>2025年度菊島澎湖行程價目表(民宿特約價)</title>
 <!--[if gte mso 9]><xml>
  <o:DocumentProperties>
   <o:Author>20230205初稿</o:Author>
